[project]
name = "stac-japan-geo"
version = "0.0.2"
dynamic = [
    "dependencies",
]
description = "Python package to search a STAC earth observation imagery catalog and find images in the Japanese archipelago."
readme = "README.md"
requires-python = ">=3.8"
keywords = [
    "stac-japan-geo",
]
license = {text = "MIT License"}
authors = [
  {name = "Robert Cheetham", email = "robert.m.cheetham@gmail.com"},
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.entry-points."console_scripts"]
stac_japan_geo = "stac_japan_geo.cli:main"

[project.optional-dependencies]
all = [
    "stac-japan-geo[extra]",
]

extra = [
    "pandas",
]


[tool]
[tool.setuptools.packages.find]
include = ["stac_japan_geo*"]
exclude = ["docs*"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}


[tool.distutils.bdist_wheel]
universal = true


[tool.bumpversion]
current_version = "0.0.2"
commit = true
tag = true

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "stac_japan_geo/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'


[tool.flake8]
exclude = [
    "docs",
]
max-line-length = 88


[project.urls]
Homepage = "https://github.com/rcheetham/stac-japan-geo"

[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"